fix distributions and ux/ui

--- a/templates/linear_congruence.html
+++ b/templates/linear_congruence.html
@@ -205,13 +205,15 @@
       document.querySelector("form").addEventListener("submit", function (e) {
         let min = document.getElementById("min-value").value;
         let max = document.getElementById("max-value").value;
-        if (min >= max) {
+        let iterations = document.getElementById("iteraciones").value;
+        if (int(min) >= int(max)) {
           e.preventDefault();
           alert("El valor mínimo debe ser menor que el valor máximo");
         }
-        if (min < 0 || max < 0) {
+
+        if (int(iterations) <= 0) {
           e.preventDefault();
-          alert("Los valores deben ser positivos");
+          alert("El número de iteraciones debe ser mayor que cero");
         }
       });
     </script>
