--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="container text-center mt-5 bg-dark text-white">
     <p class="text-center">
-      &copy; 2024 Universidad Pedaógica y Tecnológica de Colombia
+      &copy; 2024 Universidad Pedagógica y Tecnológica de Colombia
     </p>
   </div>
 </footer>
