--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,20 @@
-<header style="background-color: #6f42c1; padding: 10px">
+<header
+  class="text-center"
+  style="
+    background-color: #007bff;
+    padding: 10px;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  "
+>
   <nav class="navbar navbar-expand-lg navbar-dark">
-    <a class="navbar-brand" href="{{ url_for('index') }}"
+    <a
+      class="navbar-brand"
+      href="{{ url_for('index') }}"
+      style="
+        font-size: 1.5em;
+        color: #fff;
+        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+      "
       >Números Pseudoaleatorios</a
     >
     <button
@@ -14,30 +28,45 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('mean_squares') }}"
+          <a
+            class="nav-link"
+            href="{{ url_for('mean_squares') }}"
+            style="color: #fff"
             >Cuadrados Medios</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('linear_congruence') }}"
+          <a
+            class="nav-link"
+            href="{{ url_for('linear_congruence') }}"
+            style="color: #fff"
             >Congruencia Lineal</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('multiplicative_congruence') }}"
+          <a
+            class="nav-link"
+            href="{{ url_for('multiplicative_congruence') }}"
+            style="color: #fff"
             >Congruencia Multiplicativa</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('uniform_distribution') }}"
+          <a
+            class="nav-link"
+            href="{{ url_for('uniform_distribution') }}"
+            style="color: #fff"
             >Distribución Uniforme</a
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('normal_distribution') }}"
+          <a
+            class="nav-link"
+            href="{{ url_for('normal_distribution') }}"
+            style="color: #fff"
             >Distribución Normal</a
           >
         </li>
